@@ -467,6 +467,7 @@
     "*://*.nrz.de/*",
     "*://*.ntnews.com.au/*",
     "*://*.nw.de/*",
+    "*://*.nwzonline.de/*",
     "*://*.nybooks.com/*",
     "*://*.nydailynews.com/*",
     "*://*.nymag.com/*",
