@@ -6,6 +6,7 @@ Add Auto-motor-und-sport.de
 Add Business-standard.com (json)
 Add Medienholding Süd (opt-in to custom sites for unlisted)
 Add Money.it
+Add Nordwest Zeitung
 Add The Times Literary Supplement (json)
 Add TorStar local
 Fix Ad Age (js)
